fix: Remove background color on <em> tags in h3s.
I'm removing these background colors because they feel a little too much
like links.

I'm leaving the <em> tags in place so that we can find a way to animate
in the background colors. I think this will help things from feeling too
linky.

--- a/src/scss/_components.body-text.scss
+++ b/src/scss/_components.body-text.scss
@@ -19,18 +19,6 @@
 
     > em {
       font-style: normal;
-
-      // This applies an accent color custom property,
-      // defined in the `major-section` component, cascading
-      // down onto this element.
-      background-color: #ddd;
-      background-color: var(--accent-color-light);
-
-      padding: 0 0.25em;
-
-      // An inset box shadow is used to slightly
-      // trim down the background color
-      box-shadow: inset 0 -0.1em white;
     }
   }
 
